--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Camellia(n) Handbook
-description: A Grand Handbook filled by tutorials and stuffs for Xiaomi Redmi Note 10(T) 5G / 11SE / Poco M3 Pro 5G
+title: Camellia Handbook
+description: A Grand Handbook for Xiaomi Redmi Note 10(T) 5G / 11SE / Poco M3 Pro 5G
 show_downloads: false
 google_analytics:
-theme: jekyll-theme-cayman
+theme: jekyll-theme-midnight
